--- a/project/home.html
+++ b/project/home.html
@@ -1,28 +1,111 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <title>Mentor on Demand</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <title>Mentor on Demand</title>
+
+  <script type="text/javascript">
+    window.onload = function () {
+      var button = document.getElementsByTagName('button')[0];
+      button.onclick = function () { newRow(); };
+    };
+
+    function newRow() {
+      var tbody = document.getElementsByTagName('tbody')[0];
+      var row = tbody.getElementsByTagName('tr')[0];
+      var nextRow = row.cloneNode(true);
+      nextRow.getElementsByTagName('input')[0].value = '';
+      tbody.appendChild(nextRow);
+      nextRow.getElementsByTagName('input')[0].focus();
+    }
+  </script>
+
+  <style type="text/css">
+    h1 {
+      text-align: center;
+    }
+  </style>
+
 </head>
+
 <body>
-        <nav class="navbar navbar-inverse">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                    <h3>Mentor on Demand</h3>
-                  </div>
-                  
-                  <form class="navbar-form navbar-right" action="/action_page.php">
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Search" name="search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                  </form>
-                </div>
-              </nav>
+    <nav class="navbar navbar-light bg-primary">
+        <h1>MENTOR ON DEMAND</h1>
+    </nav>
+  <form>
+      <h1>MY profile</h1>
+    <div class="container">
+     
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="inputEmail4">Email</label>
+          <input type="email" class="form-control" id="inputEmail4">
+        </div>
+        <div class="form-row">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="username">user Name</label>
+          <input type="text" class="form-control" id="username">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="number">Mobile Number</label>
+          <input type="text" class="form-control" id="number">
+        </div>
+      </div>
+      <div class="form-group ">
+        <label for="amount">Amount in wallet</label>
+        <input type="text" class="form-control" id="amount">
+      </div>
+      <div class="form-group ">
+        <label for="address">Address</label>
+        <input type="text" class="form-control" id="address">
+      </div>
+
+
+      <table border="0" cellpadding="0" cellspacing="0" summary="">
+        <thead>
+          <tr>
+            <th>skill name</th>
+            <th>facilites</th>
+            <th>experience</th>
+            <th>Self Rating</th>
+            <th>Rating</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr>
+            <td><button type="button" class="btn btn-primary offset-md-5">Add</button></td>
+            <td><button type="submit" class="btn btn-primary offset-md-5" name="data">Delete</button></td>
+          </tr>
+        </tfoot>
+        <tbody>
+          <tr>
+            <td><input type="text" class="form-control"  name="skill[]"></td>
+            <td><input type="text" class="form-control" name="facilites[]"></td>
+            <td><input type="text" class="form-control" name="experinece[]"></td>
+            <td><input type="text" class="form-control" name="Self Rating[]"></td>
+            <td><input type="text"class="form-control" name="Rating[]"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </form>
 </body>
+
 </html>
