--- a/project/mentorsignup.html
+++ b/project/mentorsignup.html
@@ -95,7 +95,7 @@
 
             <div class="container">
                 <label for="uname"><b>Email Id</b></label>
-                <input type="text" placeholder="Enter Your Email Id" onkeyup="Validate();" name="uname" id="uname" required>
+                <input type="text" placeholder="Enter Your Email Id" onkeyup="ValidateEmail();" name="uname" id="uname" required>
                 <span id="lblError" style="color: red"></span><br>
                 <label for="psw"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="psw" onkeyup="ValidatePassword();" id="psw"  required>
