--- a/project/login.html
+++ b/project/login.html
@@ -56,12 +56,12 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light " style="background-image:linear-gradient(to right,rgba(248, 218, 218, 0.418),rgb(245, 239, 208),rgb(175, 175, 204),grey,silver,rgb(145, 136, 136),rgb(180, 176, 154),rgb(161, 178, 184))">
             <h1>MENTOR ON DEMAND</h1>
-            <form class="form-inline">
-              <input class="form-control mr-sm-2" type="search" placeholder="Timezone" aria-label="Search">
-              <input class="form-control mr-sm-2" type="search" placeholder="Technology" aria-label="Search">
-              <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+            <form class="form-inline" action="searchresult.html">
+              <input class="form-control mr-sm-2" type="search" placeholder="Timezone" required>
+              <input class="form-control mr-sm-2" type="search" placeholder="Technology" required>
+              <button class="btn btn-primary my-2 my-sm-0"  type="submit">Search</button>
             </form>
         </nav>
     <div class="heading">  
