--- a/project/mentorsignup.html
+++ b/project/mentorsignup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Mentor Sign Up</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +15,7 @@
             }
         }
 
-            function ValidatePassword() {
+        function ValidatePassword() {
             var pwd = document.getElementById("psw").value;
             var pswError = document.getElementById("pswError");
             pswError.innerHTML = "";
@@ -22,16 +23,18 @@
             if (!expr.test(pwd)) {
                 pswError.innerHTML = "Passowrd must contain atleat one upper case,one lower case,one number and between 8 to 15 characters.";
             }
-            }
+        }
     </script>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(to right,grey,silver,rgb(170, 136, 136));
+            background-image: linear-gradient(to right, grey, silver, rgb(170, 136, 136));
         }
+
         form {
             border: 3px solid #f1f1f1;
         }
+
         input[type=text],
         input[type=password] {
             width: 100%;
@@ -41,6 +44,7 @@
             border: 1px solid #ccc;
             box-sizing: border-box;
         }
+
         button {
             background-color: rgb(109, 128, 2);
             background-image: linear-gradient(blue, rgb(83, 81, 235));
@@ -53,30 +57,37 @@
             font-weight: bold;
             font-size: 20px;
         }
+
         button:hover {
             opacity: 0.8;
         }
+
         .container {
             padding: 16px;
             width: 50%;
             margin-left: 140px;
         }
+
         .form {
             width: 40%;
             margin-left: auto;
             margin-right: auto;
             margin-top: 40px;
         }
+
         .heading {
             text-align: center;
             margin-top: 60px;
         }
+
         h1 {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
+
         h2 {
             margin-top: 70px;
         }
+
         .signup {
             float: right;
         }
@@ -95,10 +106,12 @@
 
             <div class="container">
                 <label for="uname"><b>Email Id</b></label>
-                <input type="text" placeholder="Enter Your Email Id" onkeyup="ValidateEmail();" name="uname" id="uname" required>
+                <input type="text" placeholder="Enter Your Email Id" onkeyup="ValidateEmail();" name="uname" id="uname"
+                    required>
                 <span id="lblError" style="color: red"></span><br>
                 <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" onkeyup="ValidatePassword();" id="psw"  required>
+                <input type="password" placeholder="Enter Password" name="psw" onkeyup="ValidatePassword();" id="psw"
+                    required>
                 <span id="pswError" style="color: red"></span><br>
                 <label for="timezone"><b>TimeZone</b></label>
                 <input type="text" placeholder="Enter Your Timezone" name="timezone" id="timezone" required>
@@ -121,7 +134,7 @@
     </div>
 
     </form>
-    
+
 </body>
 
 </html>
